# glossary

./: .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile_dev  Dockerfile_prod  Dockerfile_test  README.md  docker-compose.dev.debugpy.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pre_launch.py  pyproject.toml  yoyo.ini
app/: main.py
app/api/v1/: glossary.py
app/api/v1/dto/requests/: glossary.py
app/api/v1/dto/responses/: glossary.py
app/common/: arbitrary_model.py  database.py  logger.py  redis.py  version.py
app/common/exceptions/: exceptions.py
app/common/filters/: filters.py
app/common/repositories/: interfaces.py  repository.py
app/common/uow/: base_uow.py  interfaces.py
app/dependencies/: dependencies.py
app/domain/: exception_handler.py  exceptions.py
app/domain/filters/: glossary.py
app/domain/repositories/: glossary_element.py  interfaces.py
app/domain/schemas/: glossary_element.py
app/infrastructure/: models.py
app/infrastructure/adapters/: edu.py  excel.py  interfaces.py
app/infrastructure/background/deffered/: cron.py  scheduler.py  tasks.py
app/infrastructure/background/instant/: tasks.py  worker.py
app/infrastructure/migrations/: glossary_20250303_01_fJv5b-initial.py
app/infrastructure/unit_of_work/: interfaces.py  uow.py
app/services/: glossary.py  interfaces.py
app/settings/: config.py
info/db/: db_prototype.drawio  structure.sql
tests/: conftest.py
tests/api/: test_glossary_api.py
tests/api/project/: test_create_or_update_glossary_elements.py
tests/fixtures/: glossary_element.py  real_glossary.json
tests/services/: test_glossary_service.py
